# phonesim

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac
src/: Quectel.xml  aes.c  aes.h  aidapplication.cpp  aidapplication.h  callmanager.cpp  callmanager.h  comp128.c  comp128.h  conformancesimapplication.cpp  control.cpp  control.h  controlbase.ui  default.xml  gsmspec.cpp  hardwaremanipulator.cpp  hardwaremanipulator.h  main.cpp  phonesim.cpp  phonesim.h  qatresult.cpp  qatresultparser.cpp  qatutils.cpp  qcbsmessage.cpp  qgsmcodec.cpp  qgsmcodec.h  qsimcommand.cpp  qsimcontrolevent.cpp  qsimenvelope.cpp  qsimenvelope.h  qsimterminalresponse.cpp  qsimterminalresponse.h  qsmsmessage.cpp  qsmsmessage_p.h  qwsppdu.cpp  qwsppdu.h  server.cpp  server.h  simapplication.cpp  simapplication.h  (+4 more)
